samples/task/valid/R17.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><info><p>Some information.</p></info></step></steps>
  </taskbody>
</task>