samples/task/invalid/R21.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><info><p>info</p></info><cmd/></step></steps>
  </taskbody>
</task>